# serializer version: 1
# name: test_all_entities[cover.zone_1_damper-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.zone_1_damper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.DAMPER: 'damper'>,
    'original_icon': None,
    'original_name': 'Damper',
    'platform': 'airtouch5',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 7>,
    'translation_key': 'damper',
    'unique_id': 'zone_1_open_percentage',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[cover.zone_1_damper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 90,
      'device_class': 'damper',
      'friendly_name': 'Zone 1 Damper',
      'supported_features': <CoverEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.zone_1_damper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_entities[cover.zone_2_damper-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.zone_2_damper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.DAMPER: 'damper'>,
    'original_icon': None,
    'original_name': 'Damper',
    'platform': 'airtouch5',
    'previous_unique_id': None,
    'supported_features': <CoverEntityFeature: 7>,
    'translation_key': 'damper',
    'unique_id': 'zone_2_open_percentage',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[cover.zone_2_damper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'damper',
      'friendly_name': 'Zone 2 Damper',
      'supported_features': <CoverEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.zone_2_damper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
